--- a/chat/package.json
+++ b/chat/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next build",
+    "serve-static": "npx serve out"
   },
   "dependencies": {
     "react": "^19.0.0",
