chore: ensure sorted jq output

--- a/chat/package.json
+++ b/chat/package.json
@@ -1,18 +1,4 @@
 {
-  "name": "chat",
-  "version": "0.6.3",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "export": "GITHUB_PAGES=true next build",
-    "serve-static": "npx serve out",
-    "deploy-gh-pages": "GITHUB_PAGES=true next build && gh-pages -d out --nojekyll -e chat -f",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
-  },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-slot": "^1.2.2",
@@ -44,5 +30,19 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.0",
     "typescript": "^5"
-  }
+  },
+  "name": "chat",
+  "private": true,
+  "scripts": {
+    "build": "next build",
+    "build-storybook": "storybook build",
+    "deploy-gh-pages": "GITHUB_PAGES=true next build && gh-pages -d out --nojekyll -e chat -f",
+    "dev": "next dev --turbopack",
+    "export": "GITHUB_PAGES=true next build",
+    "lint": "next lint",
+    "serve-static": "npx serve out",
+    "start": "next start",
+    "storybook": "storybook dev -p 6006"
+  },
+  "version": "0.6.3"
 }
