--- a/.github/workflows/pr-preview-build.yml
+++ b/.github/workflows/pr-preview-build.yml
@@ -1,4 +1,4 @@
-name: PR Preview Release Binaries
+name: PR Preview Build
 
 on:
   pull_request:
@@ -52,7 +52,7 @@ jobs:
       - name: Upload Build Artifact
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
         with:
-          name: agentapi-preview-build
+          name: agentapi-build-${{ github.event.pull_request.number }}
           path: ${{ github.workspace }}/out
           retention-days: 7
 
