--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -1,40 +1,44 @@
 name: Go Tests
 
 on:
-  push:
-    branches: [main]
-  pull_request:
+    push:
+        branches: [main]
+    pull_request:
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
+    test:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
 
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: "stable"
+            - name: Set up Go
+              uses: actions/setup-go@v5
+              with:
+                  go-version: "stable"
 
-      - name: Test
-        run: CGO_ENABLED=0 go test -count=1 -v ./...
+            - name: Test
+              run: CGO_ENABLED=0 go test -count=1 -v ./...
 
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
+    lint:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
 
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: "stable"
+            - name: Set up Go
+              uses: actions/setup-go@v5
+              with:
+                  go-version: "stable"
 
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@4afd733a84b1f43292c63897423277bb7f4313a9 # v8.0.0
-        with:
-          version: v2.1
+            - name: Set up Bun
+              uses: oven-sh/setup-bun@v2
 
-      - name: Check for unstaged changes
-        run: |
-          make gen
-          ./check_unstaged.sh
+            - name: Install Chat Dependencies
+              run: cd chat && bun install
+
+            - name: run linters
+              run: make lint
+
+            - name: Check for unstaged changes
+              run: |
+                  make gen
+                  ./check_unstaged.sh
