fix: add missing variable in pr preview release action (#107)

--- a/.github/workflows/pr-preview-release.yml
+++ b/.github/workflows/pr-preview-release.yml
@@ -61,6 +61,7 @@ jobs:
                   script: |
                       const prNumber = ${{ steps.pr.outputs.number }};
                       const releaseTag = `agentapi_${prNumber}`;
+                      const repoUrl = `https://github.com/${context.repo.owner}/${context.repo.repo}`;
                       github.rest.issues.createComment({
                         issue_number: prNumber,
                         owner: context.repo.owner,
