chore: prevent duplicate preview release comments (#119)

--- a/.github/workflows/pr-preview-release.yml
+++ b/.github/workflows/pr-preview-release.yml
@@ -37,6 +37,7 @@ jobs:
                   run-id: ${{ github.event.workflow_run.id }}
 
             - name: Create or Update PR Release
+              id: release
               env:
                   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   RELEASE_TAG: "agentapi_${{ steps.pr.outputs.number }}"
@@ -46,6 +47,7 @@ jobs:
                   if gh release view "$RELEASE_TAG" --repo ${{ github.repository }} &>/dev/null; then
                     echo "Updating release $RELEASE_TAG"
                     gh release upload "$RELEASE_TAG" ./out/* --clobber --repo ${{ github.repository }}
+                    echo "should_comment=false" >> "${GITHUB_OUTPUT}"
                   else
                     echo "Creating release $RELEASE_TAG"
                     gh release create "$RELEASE_TAG" ./out/* \
@@ -54,9 +56,11 @@ jobs:
                       --repo ${{ github.repository }} \
                       --latest=false \
                       --prerelease
+                    echo "should_comment=true" >> "${GITHUB_OUTPUT}"
                   fi
 
             - name: Comment on PR
+              if: steps.release.outputs.should_comment == 'true'
               uses: actions/github-script@v7
               with:
                   script: |
